--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 						<div class="main_content">
 
 							<div class="logo">
-								<a href="/">
-									<img src="./assets/icons/logo.svg" alt="GIGY">
+								<a href="#">
+									<img src="./assets/icons/Logo.svg" alt="GIGY">
 								</a>
 							</div>
 							<div class="title_wrap">
@@ -563,7 +563,10 @@
 					<div class="nav_hide_blur">
 						<div class="nav_hide_header">
 							<div class="hide_logo">
-								<img src="./assets/icons/Logo.svg" alt="studio">
+								<a href="#">
+									<img src="./assets/icons/Logo.svg" alt="studio">
+								</a>
+								
 								
 							</div>
 							<div class="language_toggle">
@@ -787,7 +790,7 @@
 				<nav class="nav_visible">
 					<div class="nav_visible_blur">
 						<div class="nav_logo_wrap">
-						<a href="/" class="nav_logo">
+						<a href="#" class="nav_logo">
 							<img src="./assets/icons/fixed-logo.svg" alt="GIGY">
 						</a>
 						<div class="nav_text">
