--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 								</a>
 							</div>
 							<div class="title_wrap">
-								<h1>One <span class="title_span">focus</span>. Maximum <span class="title_span">depth</span>.</h1>
+								<h1 class="visually_hidden">One <span class="title_span">focus</span>. Maximum <span class="title_span">depth</span>.</h1>
+								<p class="class_h1">One <span class="title_span">focus</span>. Maximum <span class="title_span">depth</span>.</p>
 								<p class="main_descr">Design we dive into. Technology that accelerates. Results that stand out.
 									</p>
 								<div thumbsSlider="" class="swiper mySwiper">
