--- a/index.html
+++ b/index.html
@@ -689,16 +689,16 @@
 					<div class="nav_hide_blur">
 						<div class="nav_hide_header">
 							<div class="hide_logo">
-								<a href="#">
+								<a href="./">
 									<img src="./assets/icons/Logo.svg" alt="studio">
 								</a>							
 							</div>
 							<div class="language_toggle">
-								<a href="#" class="lang_wrap lang_wrap_active">
+								<a href="./" class="lang_wrap lang_wrap_active">
 									<span class="lang_p ">En</span>
 									<div class="bot_line "></div>
 								</a>
-								<a href="#" class="lang_wrap">
+								<a href="./" class="lang_wrap">
 									<span class="lang_p">Cz</span>
 									<div class="bot_line"></div>
 								</a>
@@ -709,7 +709,7 @@
 							<a href="./" class="hide_item">
 								<div class="item_left_wrap">
 									<div class="hide_item_img">
-										<video  muted loop playsinline>
+										<video preload="auto" muted playsinline autoplay="autoplay" loop="loop">
 											<source src="./assets/video/galery/video1.mp4" type="video/mp4">
 										</video>									
 									</div>
@@ -725,7 +725,7 @@
 							<a href="./"  class="hide_item">
 								<div class="item_left_wrap">
 									<div class="hide_item_img">
-										<video  muted loop playsinline>
+										<video  preload="auto" muted playsinline autoplay="autoplay" loop="loop">
 											<source src="./assets/video/galery/video2.mp4" type="video/mp4">
 										</video>
 									</div>
