--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 							<a href="./" class="hide_item">
 								<div class="item_left_wrap">
 									<div class="hide_item_img">
-										<video  muted loop playsinline>
+										<video  muted loop playsinline poster="assets/images/galery/poster3.png">
 											<source src="./assets/video/galery/video3.mp4" type="video/mp4">
 										</video>
 									</div>
@@ -757,7 +757,7 @@
 							<a href="./"  class="hide_item">
 								<div class="item_left_wrap">
 									<div class="hide_item_img">
-										<video muted loop playsinline>
+										<video muted loop playsinline poster="assets/images/galery/poster4.png">
 											<source src="./assets/video/galery/video4.mp4" type="video/mp4">
 										</video>
 									</div>
@@ -774,7 +774,7 @@
 							<a href="./"  class="hide_item">
 								<div class="item_left_wrap">
 									<div class="hide_item_img">
-										<video  muted loop playsinline>
+										<video  muted loop playsinline poster="assets/images/galery/poster5.png">
 											<source src="./assets/video/galery/video5.mp4" type="video/mp4">
 										</video>
 									</div>
