--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 								<div thumbsSlider="" class="swiper mySwiper1">									
 									<!-- <div class="swiper-pagination pagination_main"></div> -->									 
 									<div class="swiper-wrapper" style="--swiper-pagination-color: #fff">										
-										<div class="swiper-slide">							
+										<div class="swiper-slide">	
+											<div class="autoplay-progress">
+      <svg viewBox="0 0 48 48">
+        <circle cx="24" cy="24" r="20"></circle>
+      </svg>
+      <span></span>
+    </div>			
 											<div class="cont_wrap">
 												<div class="icon_wrap">
 													<div class="icon">
@@ -72,7 +78,13 @@
 												<span class="slide_span">Building a vision of longevity and a new dawn for healthcare.</span>
 											</div>										
 										</div>
-										<div class="swiper-slide">										
+										<div class="swiper-slide">		
+											<div class="autoplay-progress">
+      <svg viewBox="0 0 48 48">
+        <circle cx="24" cy="24" r="20"></circle>
+      </svg>
+      <span></span>
+    </div>			
 											<div class="cont_wrap">
 												<div class="icon_wrap">
 													<div class="icon">
@@ -106,6 +118,7 @@
 											</div>
 										</div>
 									</div>
+									
 								</div>
 							</div>
 						</div>
